force-app/main/default/objects/Remittance_Payout__c/Remittance_Payout__c.object-meta.xml
<CustomObject>
    <label>Remittance Payout</label>
    <nameField>
        <displayFormat>RP-{0000000000}</displayFormat>
        <label>Remittance Payout Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remittance Payouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>