force-app/main/default/objects/Remittance_Payout__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Remittance Payouts</relationshipLabel>
    <relationshipName>Remittance_Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>