force-app/main/default/objects/Remittance_Payout__c/fields/FIN_BeneficiaryAddenda__c.field-meta.xml
<CustomField>
    <fullName>FIN_BeneficiaryAddenda__c</fullName>
    <label>Beneficiary Addenda</label>
    <length>250</length>
    <type>Text</type>
</CustomField>