force-app/main/default/objects/Remittance_Payout__c/fields/FIN_BeneficiaryID__c.field-meta.xml
<CustomField>
    <fullName>FIN_BeneficiaryID__c</fullName>
    <formula>Payee__r.FIN_Beneficiary_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beneficiary ID</label>
    <type>Text</type>
</CustomField>