force-app/main/default/objects/Remittance_Payout__c/fields/FIN_PayeeLegalName__c.field-meta.xml
<CustomField>
    <fullName>FIN_PayeeLegalName__c</fullName>
    <formula>Payee__r.FIN_LegalName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remittance Account Legal Name</label>
    <type>Text</type>
</CustomField>