force-app/main/default/objects/Remittance_Payout__c/fields/FIN_PublishDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_PublishDate__c</fullName>
    <label>Publishing Date</label>
    <type>Date</type>
</CustomField>