force-app/main/default/objects/Remittance_Payout__c/fields/FIN_RemittanceAccount__c.field-meta.xml
<CustomField>
    <fullName>FIN_RemittanceAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DELETE Remittance Account</label>
    <referenceTo>FIN_Remittance_Account__c</referenceTo>
    <relationshipLabel>Remittance Payouts</relationshipLabel>
    <relationshipName>Remittance_Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>