force-app/main/default/objects/Remittance_Payout__c/fields/FIN_RemittancePayoutAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_RemittancePayoutAmount__c</fullName>
    <label>Remittance Payout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>