force-app/main/default/objects/Remittance_Payout__c/fields/FIN_SettlementSchedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_SettlementSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement Process</label>
    <referenceTo>FIN_SettlementSchedule__c</referenceTo>
    <relationshipLabel>Remittance Payouts</relationshipLabel>
    <relationshipName>Remittance_Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>