force-app/main/default/objects/Remittance_Payout__c/fields/FIN_SettlementScheduleStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_SettlementScheduleStatus__c</fullName>
    <formula>TEXT(FIN_SettlementSchedule__r.FIN_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Process Status</label>
    <type>Text</type>
</CustomField>