force-app/main/default/objects/Remittance_Payout__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remittance Account</label>
    <referenceTo>FIN_Payee__c</referenceTo>
    <relationshipLabel>Remittance Payouts</relationshipLabel>
    <relationshipName>Remittance_Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>