force-app/main/default/objects/Remittance_Payout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_RemittanceAccount__c</columns>
    <columns>Payee__c</columns>
    <columns>FIN_PayeeLegalName__c</columns>
    <columns>FIN_RemittancePayoutAmount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>FIN_SettlementSchedule__c</columns>
    <columns>FIN_SettlementScheduleStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Remittance Payouts</label>
</ListView>