force-app/main/default/objects/Remittance_Payout__c/listViews/Approved_Remittance_Payouts.listView-meta.xml
<ListView>
    <fullName>Approved_Remittance_Payouts</fullName>
    <columns>NAME</columns>
    <columns>FIN_RemittanceAccount__c</columns>
    <columns>Payee__c</columns>
    <columns>FIN_PayeeLegalName__c</columns>
    <columns>FIN_RemittancePayoutAmount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>FIN_SettlementSchedule__c</columns>
    <columns>FIN_SettlementScheduleStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Remittance Payouts</label>
</ListView>